Bug fix: stop mirroring session when tab is closed. Fix bug caused by cl: https://codereview.chromium.org/2365223002. |running_callback_| is used as a callback when status changes, and should not be reset if the capture is successfully started.

BUG=655240

Review-Url: https://codereview.chromium.org/2408143004
Cr-Commit-Position: refs/heads/master@{#425124}

Former-commit-id: a8e9c8591d8d5026c32d6d93bf11f0ff5096eee9